# authzed-zed

./: .gitignore  Cargo.toml  extension.toml
languages/authzed/: config.toml
src/: authzed.rs
